--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,4 +29,9 @@ spring.datasource.connectionProperties=druid.stat.mergeSql=true;druid.stat.slowS
 # 合并多个DruidDataSource的监控数据
 #spring.datasource.useGlobalDataSourceStat=true
 
+# mybatis_config
+mybatis.mapper-locations=classpath:mapper/**/*.xml
+mybatis.typeAliasesPackage=com.blog.module.model
+mybatis.type-handlers-package=com.blog.common.base
+
 server.port=9999
