--- a/pom.xml
+++ b/pom.xml
@@ -141,5 +141,14 @@
             <version>5.1.38</version>
         </dependency>
         <!-- POI -->
+
+        <!--ehcache-->
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>2.10.2</version>
+            <type>pom</type>
+        </dependency>
+        <!--ehcache-->
     </dependencies>
 </project>
